# clinical-note-intelligence

./: .env.example  .gitignore  HANDOFF.md  Makefile  PLAN.md  README.md  pyproject.toml
app/: databricks_client.py  db.py  main.py  tooltips.py
app/pages/: 00_overview.py  01_dashboard.py  02_review_queue.py  03_note_detail.py  04_analytics.py  05_failed_extractions.py  06_evaluation.py  07_experiments.py  08_documentation.py  09_imaging.py  10_notebooks.py  11_databricks_live.py  12_feedback.py  13_optimization.py
data/evaluation/: eval_cost_report.json  evaluation_results.json  run_history.json  selected_hadm_ids.json
data/evaluation/extractions/: 20199380.json  20297618.json  21322534.json  21606243.json  22342963.json  22502504.json  22733922.json  22954658.json  22987108.json  23514107.json  23786647.json  (+19 more)
data/optimization/: best_prompt.txt  opt_hadm_ids.json  prompt_history.json
docs/governance/: data_lineage.md  phi_policy.md
docs/model_cards/: claude_extraction.md  icd10_matcher.md
docs/qa_audit/: error_taxonomy.md  qa_report.md
notebooks/: 02_spark_ingestion_databricks.py  02_spark_ingestion_local.py  03_full_pipeline.ipynb  03_full_pipeline_databricks.py  04_end_to_end_pipeline.ipynb  04_end_to_end_pipeline_databricks.py
scripts/: convert_databricks_notebook.py  convert_ipynb_notebook.py  sync_databricks_notebooks.py
src/clinical_pipeline/: config.py  load_to_db.py
static/notebooks/: 02_spark_ingestion_databricks.html  04_end_to_end_pipeline.html  full_pipeline.html  manifest.json  viewer.html
tests/: test_cleaners.py  test_models.py
(+104 files in other folders)
