[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-note-intelligence"
version = "0.1.0"
description = "End-to-end clinical data intelligence pipeline: PySpark ingestion, Claude-powered extraction, ICD-10 coding, and HITL validation."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyspark>=3.5",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "streamlit>=1.35",
    "pandas",
    "python-dotenv",
    "rapidfuzz",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
